--- a/package.json
+++ b/package.json
@@ -3,16 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "lodash": "^4.17.21",
+    "micro": "^10.0.1",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.1.1",
     "next": "13.4.2",
+    "next-auth": "^4.22.1",
+    "next-reveal": "^1.0.6",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
+    "stripe": "^12.5.0",
+    "styled-components": "^5.3.9"
   }
 }
